# curs_work_6

./: README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blog/templatetags/: blog_tags.py
config/: settings.py  urls.py
data/: group_data.json
mainapp/: admin.py  apps.py  apscheduler_jop.py  forms.py  models.py  services.py  urls.py  views.py
mainapp/management/commands/: aps.py  csu.py
mainapp/migrations/: 0001_initial.py
mainapp/templates/mainapp/: attempt_list.html  base.html  client_detail.html  client_form.html  client_list.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mainapp/templates/mainapp/includes/: inc_nav.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/user/: login.html  new_password_form.html  user_form.html  user_list.html
