[tool.poetry]
name = "curs_work_6"
version = "0.1.0"
description = ""
authors = ["viktor_klimanov <viktor.klimanov.2017@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
